# kompo-mcp-rb-server

./: Dockerfile  Dockerfile-ubuntu  Gemfile  README.md  hello_prompt.rb  hello_resource.rb  hello_resource_template.rb  hello_tool.rb  server.rb  start.sh  start2.sh
kompo/: .gitignore  README.md  kompo-0.2.0.gem  kompo.gemspec
kompo-vfs/: Cargo.toml  README.md
kompo-vfs/Formula/: kompo-vfs.rb
kompo-vfs/kompo_fs/: Cargo.toml  build.rs  dummy_fs.c
kompo-vfs/kompo_fs/src/: glue.rs  lib.rs  util.rs
kompo-vfs/kompo_storage/: Cargo.toml
kompo-vfs/kompo_storage/src/: lib.rs
kompo-vfs/kompo_wrap/: Cargo.toml
kompo-vfs/kompo_wrap/src/: lib.rs
kompo/exe/: kompo
kompo/lib/: fs.c.erb  kompo.rb  main.c.erb
kompo/lib/ext/: Setup  Setup.patch
myapp/: Gemfile  server.rb
myapp/config/: credentials.yml.enc  master.key
myapp/tmp/cache/bootsnap/: load-path-cache
myapp/tmp/cache/bootsnap/compile-cache-iseq/00/: 079812e2f13848  0fba9d4804cf31  118faa01373464  120cb4e51f83c3  165c157937bf1c  3ff0d08807522d  42ab6cbb8448c9  5de720d72fc16b  6d580313502ac1  8883d0e8df38c2  8d817825528af0  a7103298cfbb2b  b35fa013bac503  c95df7e1cbdc70  d02ca79e339da0  dbff488c3592ca  dce4de06c80cc0  f10e081ad99e73  f1a5f2ff0f65bb  f537a422aa088b
myapp/tmp/cache/bootsnap/compile-cache-iseq/01/: 102bc89c667270  1475bb7a776746  1997904bf6c4d6  296de7f6b1783a  2cd75975432f3d  3b9ffd3a8dd74a  44e337c43cc0f9  84f3f637bb8d2e  9f48d42d9bb410  ab9360ef8d7047  b0a5ec248fdcab  c82a8dafa8b50e  e8dcdedfc14a8a
myapp/tmp/cache/bootsnap/compile-cache-iseq/02/: 18af5d2979ee62  3e01301c842afa  (+8 more)
(+3054 files in other folders)
